# js-source-scopes

./: .craft.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml  weekly.yml
scripts/: bump-version.sh
src/: lib.rs  lookup.rs  name_resolver.rs  rslint.rs  scope_index.rs  scope_name.rs  smcache.rs  source.rs  swc.rs
src/smcache/: lookup.rs  mod.rs  raw.rs  writer.rs
tests/: extract.rs  integration.rs
tests/fixtures/: README.md  simple.html  simple.js
tests/fixtures/off-by-one/: README.md
tests/fixtures/private-method/: minified.js  minified.js.map  original.js
tests/fixtures/prototype-chain/: README.md  minified.js  minified.js.map  original.js
tests/fixtures/simple/: minified.js.map  original.js
tests/fixtures/trace/: sync.mjs
tests/fixtures/ts-function-name/: README.md  minified.js  minified.js.map  original.ts  sentry-repro.js  sentry-repro.js.map
tests/fixtures/vendors/: vendors.js  vendors.js.map
