[package]
name = "js-source-scopes"
version = "0.5.0"
edition = "2021"

description = "Utilities for extracting and dealing with scope information in JS code"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/js-source-scopes"
homepage = "https://github.com/getsentry/js-source-scopes"
repository = "https://github.com/getsentry/js-source-scopes"

[dependencies]
indexmap = "2.8.0"
sourcemap = "9.1.2"
swc_common = "0.33.26"
swc_ecma_parser = "0.144.1"
swc_ecma_visit = { version = "0.99.1", features = ["path"] }
thiserror = "1.0.32"
tracing = "0.1.36"
