[package]
name = "js-source-scopes"
version = "0.6.0"
edition = "2021"

description = "Utilities for extracting and dealing with scope information in JS code"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/js-source-scopes"
homepage = "https://github.com/getsentry/js-source-scopes"
repository = "https://github.com/getsentry/js-source-scopes"

[dependencies]
indexmap = "2.8.0"
sourcemap = "9.1.2"
swc_common = "8.0.0"
swc_ecma_parser = "10.0.1"
swc_ecma_visit = { version = "8.0.0", features = ["path"] }
thiserror = "2.0.12"
tracing = "0.1.36"
